doc - implementierung - webapp: controller und views

--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -230,3 +230,13 @@ month = {Feb},
 year = {2002},
 note = {(Accessed on 02/20/2018)}
 }
+
+@misc{Ng2014,
+  author = {Jackie Ng},
+  title = {bootstrap-viewer-template},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/jumpinjackie/bootstrap-viewer-template}},
+  commit = {fcb15e70488f396311e4b22c7ef4213a70700dd4}
+}
