--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -153,6 +153,7 @@ breaklinks=true] {hyperref}
 \renewcaptionname{ngerman}{\listfigurename}{Abbildungsverzeichnis}
 \renewcaptionname{ngerman}{\listtablename}{Tabellenverzeichnis}
 \renewcommand\lstlistlistingname{Quellcodeverzeichnis}
+\renewcaptionname{ngerman}{\refname}{Quellenverzeichnis}
 \renewcaptionname{ngerman}{\figurename}{Abbildung}
 \renewcaptionname{ngerman}{\tablename}{Tabelle}
 \setkomafont{caption}{\footnotesize\itshape}
