--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -147,6 +147,60 @@ breaklinks=true] {hyperref}
 % Python for inline
 \newcommand\pythoninline[1]{{\pythonstyle\lstinline!#1!}}
 
+
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  morestring=[b]',
+  morestring=[b]"
+}
+
+\newcommand\jsstyle{\lstset{
+    language=JavaScript,
+    backgroundcolor = \color{backcolour},
+    keepspaces=true, 
+    %commentstyle=\color{codebrown},
+    %keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    %stringstyle=\color{codepurple},
+    basicstyle=\ttm,
+    otherkeywords={},             % Add keywords here
+    %keywordstyle=\ttb\color{deepblue},
+    emph={ArgoFloat,__init__,__iter__, __next__,__enter__,__exit__, __repr__, Measurement, Location, Profile, Record, ExtractorFactory, DataBaseWriter, DatasetContextManager, ArgoFloatProfile, Float },          % Custom highlighting
+    %emphstyle=\ttb\color{deepred},    % Custom highlighting style
+    stringstyle=\color{deepgreen},
+    frame=single,                         % Any extra options here
+    rulesepcolor=\color{gray},
+    rulecolor=\color{lightgray},
+    showstringspaces=false,            % 
+    breaklines=true,
+    postbreak=\mbox{\textcolor{lightgray}{$\hookrightarrow$}\space},
+    lineskip={-1.5pt},
+    numbers=left,
+    numbersep=5pt,
+    numberstyle=\small\color{lightgray},
+    stepnumber=1,
+    captionpos=b,
+    basicstyle=\ttfamily\footnotesize,
+    aboveskip=20pt,
+    belowskip=20pt,
+}}
+
+\lstnewenvironment{javascript}[1][]
+{
+\jsstyle
+\lstset{#1}
+}
+{}
+
 % -------------------------------------------------------------------------------------
 
 \renewcaptionname{ngerman}{\contentsname}{Inhalt}
