doc - Ausblick: Bild und Abschlusszitat- typo

--- a/BA_argo_doc/auswertung.tex
+++ b/BA_argo_doc/auswertung.tex
@@ -12,9 +12,9 @@
 
 
 
-Damit endet diese Arbeit mit folgendem Zitat aus "`Zen und die Kunst ein Motorat zu warten"' von Robert M. Pirsing:
+Damit endet diese Arbeit mit folgendem Zitat aus dem Buch "`\textit{Zen und die Kunst ein Motorrad zu warten}"' von Robert M. Pirsing:
 
 \begin{quotation}
- Der echte Zug des Wissens ist nichts Statisches, das man anhalten un in Teile zerlegen kann. Er ist immer in Fahrt. Auf einem Gleis namens WUalität. Und die Lok und die 120 Güterwagen fahren nie woanders hin, als wo das Gleis der Qualität sie hinführt.
+ Der echte Zug des Wissens ist nichts Statisches, das man anhalten und in Teile zerlegen kann. Er ist immer in Fahrt. Auf einem Gleis namens Qualität. Und die Lok und die 120 Güterwagen fahren nie woanders hin, als wo das Gleis der Qualität sie hinführt.
 \end{quotation} 
 
