--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -240,3 +240,23 @@ note = {(Accessed on 02/20/2018)}
   howpublished = {\url{https://github.com/jumpinjackie/bootstrap-viewer-template}},
   commit = {fcb15e70488f396311e4b22c7ef4213a70700dd4}
 }
+
+@misc{sundstrm16,
+  author = {Johan Sundstroem},
+  title = {world.geo.json},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/johan/world.geo.json}},
+  commit = {34c96bba9c07d2ceb30696c599bb51a5b939b20f}
+}
+
+
+@misc{RFC7946T7,
+    author = {Butler, et al.},
+    title = {RFC 7946 - The GeoJSON Format},
+    howpublished = {\url{https://tools.ietf.org/html/rfc7946}},
+    month = {August},
+    year = {2016},
+    note = {(Accessed on 03/01/2018)}
+}
