doc - Implementierung: Kartendarstellung 2

--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -200,6 +200,7 @@ breaklinks=true] {hyperref}
 \lstset{#1}
 }
 {}
+\newcommand\jsinline[1]{{\jsstyle\lstinline!#1!}}
 
 % -------------------------------------------------------------------------------------
 
